last commit dont know!

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   </ul>
                 </div>
                 <div class="navbar-end">
-                    <i class="fa-solid fa-magnifying-glass lg:mr-3 hidden"></i>
+                    <i class="fa-solid fa-magnifying-glass lg:mr-3 "></i>
                   <a class="btn bg-[#FF4240] text-white">Get Ticket</a>
                 </div>
               </div>
