--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                       <li><a>Contact</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost lg:text-4xl font-manpore ">Hockey<span class="text-[#FF4240]">'</span>s</a>
+                  <a class="btn btn-ghost lg:text-4xl font-manpore mr-20">Hockey<span class="text-[#FF4240]">'</span>s</a>
     
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -431,3 +431,4 @@
     </footer>
 </body>
 </html>
+
