--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="lg:grid-cols-2 lg:grid gap-10 grid grid-cols-1">
                 <div class="w-full lg:relative relative">
                     <img src="Images/2.png" alt="" class="w-full">
-                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg:top[100%]">
+                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg: rounded-xl">
                         <h3 class="lg:text-2xl ">Junior Program</h3>
                         <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="w-full lg:relative relative">
                     <img src="Images/3.png" alt="" class="w-full">
-                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg:top[100%]">
+                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg:top[100%] rounded-xl">
                         <h3 class="lg:text-2xl ">Junior Program</h3>
                         <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -143,8 +143,8 @@
                     </div>
                 </div>
                 <div class="w-full lg:relative relative lg:col-span-2 lg:h-10px lg:h-[450px]">
-                    <img src="Images/4.png" alt="" class="lg:w-full h-[110px] lg:h-[450px] ">
-                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[10%] lg:top-[55%]">
+                    <img src="Images/4.png" alt="" class="lg:w-full h-[110px] lg:h-[450px]">
+                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[10%] lg:top-[55%] rounded-xl">
                         <h3 class="lg:text-2xl ">Junior Program</h3>
                         <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
@@ -175,7 +175,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping lr:mr-10"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                   </div>
@@ -191,7 +191,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                   </div>
@@ -207,7 +207,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                   </div>
@@ -223,7 +223,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                   </div>
@@ -239,7 +239,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                   </div>
@@ -255,7 +255,7 @@
                       <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
                       <div class="card-actions justify-start">
                         <p class="text-red-400">Price - $22.00</p>
-                        <p>Delivery Fee : Free</p>
+                        <p><i class="fa-solid fa-cart-shopping"></i>Delivery Fee : Free</p>
                       </div>
                     </div>
                 </div>
