--- a/index.html
+++ b/index.html
@@ -89,29 +89,29 @@
     </header>
     <main class="container mx-auto">
         <section class="my-28 text-center space-y-5">
-            <h2 class="font-extrabold text-4xl">Professional Hockeys Club</h2>
+            <h2 class="font-semibold text-4xl">Professional Hockeys Club</h2>
             <div class="flex justify-center"><p class="lg:w-1/2 text-center">On February 16, 2005, the NHL became the first major professional team sport in North America to cancel an entire season because of a labor dispute. Play resumed again in the fall of 2005. During the dispute.</p></div>
         </section>
         <section class="mt-20">
             <div class="grid lg:grid-cols-4 grid-cols-1 gap-6">
-                <div class="flex flex-col ">
+                <div class="flex flex-col space-y-3">
                     <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:70;" role="progressbar">70%</div>
-                    <h3 class="text-center">Player Facility</h3>
+                    <h3 class="text-center font-extrabold">Player Facility</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
-                <div class="flex flex-col ">
+                <div class="flex flex-col space-y-3">
                     <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:95;" role="progressbar">95%</div>
-                    <h3 class="text-center">Experienced Coach</h3>
+                    <h3 class="text-center font-extrabold">Experienced Coach</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
-                <div class="flex flex-col ">
+                <div class="flex flex-col space-y-3">
                     <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:90;" role="progressbar">90%</div>
-                    <h3 class="text-center">Senior Player</h3>
+                    <h3 class="text-center font-extrabold">Senior Player</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
-                <div class="flex flex-col">
+                <div class="flex flex-col space-y-3">
                     <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:80;" role="progressbar">80%</div>
-                    <h3 class="text-center">Training Ground</h3>
+                    <h3 class="text-center font-extrabold">Training Ground</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
             </div>
@@ -120,7 +120,7 @@
         </section>
         <section class="my-28">
             <div class="flex flex-col justify-center my-20 space-y-6">
-                <h3 class="font-extrabold text-4xl mx-auto text-center">Program Sections</h3>
+                <h3 class="font-semibold text-4xl mx-auto text-center">Program Sections</h3>
                 <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="lg:grid-cols-2 lg:grid gap-10 grid grid-cols-1">
@@ -159,7 +159,7 @@
         
         <section class=" mt-20">
             <div class="space-y-6">
-                <h3 class="text-4xl font-extrabold text-center">Our New Products</h3>
+                <h3 class="text-4xl font-semibold text-center">Our New Products</h3>
                 <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="mt-20 grid grid-cols-1 lg:grid lg:grid-cols-2 lg:gap-8">
