--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="flex flex-col lg:flex-row gap-8 p-8 ">
                 <img src="Images/11.png" alt="">
                 <div class="flex-1">
-                    <div class="collapse collapse-plus bg-base-200 w-[90%]">
+                    <div class="collapse collapse-plus bg-base-200 ">
                         <input type="radio" name="my-accordion-3" checked="checked" /> 
                         <div class="collapse-title text-xl font-medium">
                             Our Equipment
