done!!...at last

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
 <style>
-
+    h3{
+      color: black;
+    }
+    p{
+      color: #13131899;
+    }
 </style>
 </head>
-<body class="mx-10">
-    <header>
+<body class="bg-white">
+    <header class="bg-white">
         <nav class="mb-10">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -55,8 +60,8 @@
                 <div id="slide1" class="carousel-item lg:relative w-full relative flex flex-col">
                   <img src="Images/1.png" class="w-full" />
                   <div class="lg:absolute lg:h-[20%] bg-black lg:top-[70%] lg:left-[45%] space-y-1 p-6 text-xl lg:shadow-lg rounded-md w-full h-[150px] mt-12">
-                    <h3 class="font-manrope font-extrabold font-white">Meet all the heroes from the field</h3>
-                    <p class="text-sm">Here all the plays with respect and proud ....thats the spirit here!!</p>
+                    <h3 class="font-manrope font-extrabold text-white">Meet all the heroes from the field</h3>
+                    <p class="text-sm text-white">Here all the plays with respect and proud ....thats the spirit here!!</p>
                   </div>
                   <div class="absolute lg:flex transform -translate-y-1/2 lg:top-[90%] lg:left-[10%] top-[30%] left-[35%]">
                     <a href="#slide4" class="btn btn-circle lg:mr-6">❮</a> 
@@ -87,30 +92,30 @@
               </div>
         </section>
     </header>
-    <main class="container mx-auto">
+    <main class="container mx-auto bg-white">
         <section class="my-28 text-center space-y-5">
-            <h2 class="font-semibold text-4xl">Professional Hockeys Club</h2>
+            <h2 class="font-semibold text-4xl text-black">Professional Hockeys Club</h2>
             <div class="flex justify-center"><p class="lg:w-1/2 text-center">On February 16, 2005, the NHL became the first major professional team sport in North America to cancel an entire season because of a labor dispute. Play resumed again in the fall of 2005. During the dispute.</p></div>
         </section>
         <section class="mt-20">
             <div class="grid lg:grid-cols-4 grid-cols-1 gap-6">
                 <div class="flex flex-col space-y-3">
-                    <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:70;" role="progressbar">70%</div>
+                    <div class="radial-progress text-red-500 mx-auto" style="--value:70;" role="progressbar">70%</div>
                     <h3 class="text-center font-extrabold">Player Facility</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
                 <div class="flex flex-col space-y-3">
-                    <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:95;" role="progressbar">95%</div>
+                    <div class="radial-progress text-[#49D293] mx-auto" style="--value:95;" role="progressbar">95%</div>
                     <h3 class="text-center font-extrabold">Experienced Coach</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
                 <div class="flex flex-col space-y-3">
-                    <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:90;" role="progressbar">90%</div>
+                    <div class="radial-progress text-[#FFB546] mx-auto" style="--value:90;" role="progressbar">90%</div>
                     <h3 class="text-center font-extrabold">Senior Player</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
                 <div class="flex flex-col space-y-3">
-                    <div class="radial-progress bg-primary text-primary-content border-4 border-primary mx-auto" style="--value:80;" role="progressbar">80%</div>
+                    <div class="radial-progress text-[#4C8DF1] mx-auto" style="--value:80;" role="progressbar">80%</div>
                     <h3 class="text-center font-extrabold">Training Ground</h3>
                     <p class="text-center">everything about the player are in concern of the committee..</p>
                 </div>
@@ -126,29 +131,29 @@
             <div class="lg:grid-cols-2 lg:grid gap-10 grid grid-cols-1">
                 <div class="w-full lg:relative relative">
                     <img src="Images/2.png" alt="" class="w-full">
-                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg: rounded-xl">
-                        <h3 class="lg:text-2xl ">Junior Program</h3>
-                        <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg: rounded-xl ">
+                        <h3 class="lg:text-2xl text-white">Junior Program</h3>
+                        <p class="lg:text-sm text-[6px] text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="btn btn-primary">Register Now</button>    
+                        <button class="btn btn-primary text-white">Register Now</button>    
                     </div>
                 </div>
                 <div class="w-full lg:relative relative">
                     <img src="Images/3.png" alt="" class="w-full">
                     <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[20%] lg:top[100%] rounded-xl">
-                        <h3 class="lg:text-2xl ">Junior Program</h3>
-                        <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                        <h3 class="lg:text-2xl text-white">Teenegar Program</h3>
+                        <p class="lg:text-sm text-[6px] text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="btn btn-primary">Register Now</button>    
+                        <button class="btn btn-primary text-white">Register Now</button>    
                     </div>
                 </div>
-                <div class="w-full lg:relative relative lg:col-span-2 lg:h-10px lg:h-[450px]">
-                    <img src="Images/4.png" alt="" class="lg:w-full h-[110px] lg:h-[450px]">
+                <div class="bg-white w-full lg:relative relative lg:col-span-2 lg:h-10px lg:h-[450px]">
+                    <img src="Images/4.png" alt="" class="lg:w-full h-[110px] lg:h-[450px] w-full">
                     <div class="lg:absolute bg-[#13131880] lg:ml-4 lg:p-6 lg:h-[180px] space-y-1 absolute top-[10%] lg:top-[55%] rounded-xl">
-                        <h3 class="lg:text-2xl ">Junior Program</h3>
-                        <p class="lg:text-sm text-[6px]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                        <h3 class="lg:text-2xl text-white">Professional Program</h3>
+                        <p class="lg:text-sm text-[6px] text-white">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                             enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                        <button class="btn btn-primary">Register Now</button>    
+                        <button class="btn btn-primary text-white">Register Now</button>    
                     </div>
                 </div>
             </div>
@@ -163,7 +168,7 @@
                 <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             </div>
             <div class="mt-20 grid grid-cols-1 lg:grid lg:grid-cols-2 lg:gap-8">
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/5.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex flex-row ">
@@ -179,7 +184,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/6.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex flex-row">
@@ -195,7 +200,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/7.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex">
@@ -211,7 +216,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/8.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex">
@@ -227,7 +232,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/9.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex">
@@ -243,7 +248,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
+                <div class="bg-white card card-side bg-base-100 shadow-xl flex flex-col lg:flex-row">
                     <figure><img src="Images/10.png" alt="Movie"/></figure>
                     <div class="card-body">
                         <div class="flex">
@@ -267,54 +272,54 @@
             <div class="flex flex-col lg:flex-row gap-8 p-8 ">
                 <img src="Images/11.png" alt="">
                 <div class="flex-1">
-                    <div class="collapse collapse-plus bg-base-200 ">
+                    <div class="collapse collapse-plus bg-white ">
                         <input type="radio" name="my-accordion-3" checked="checked" /> 
-                        <div class="collapse-title text-xl font-medium">
+                        <div class="collapse-title text-xl font-medium text-black">
                             Our Equipment
                     </div>
                     <div class="collapse-content"> 
                       <p>hello</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-plus bg-base-200">
+                  <div class="collapse collapse-plus bg-white">
                     <input type="radio" name="my-accordion-3" /> 
-                    <div class="collapse-title text-xl font-medium">
+                    <div class="collapse-title text-xl font-medium text-black">
                         Hockey Training
                     </div>
                     <div class="collapse-content"> 
                       <p>hello</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-plus bg-base-200">
+                  <div class="collapse collapse-plus bg-base-200  bg-white">
                     <input type="radio" name="my-accordion-3" /> 
-                    <div class="collapse-title text-xl font-medium">
+                    <div class="collapse-title text-xl font-medium text-black">
                         Private Lessons
                     </div>
                     <div class="collapse-content"> 
                       <p>hello</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-plus bg-base-200">
+                  <div class="collapse collapse-plus bg-base-200 bg-white">
                     <input type="radio" name="my-accordion-3" /> 
-                    <div class="collapse-title text-xl font-medium">
+                    <div class="collapse-title text-xl font-medium text-black">
                         Ski Touring
                     </div>
                     <div class="collapse-content"> 
                       <p>hello</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-plus bg-base-200">
+                  <div class="collapse collapse-plus bg-white">
                     <input type="radio" name="my-accordion-3" /> 
-                    <div class="collapse-title text-xl font-medium">
+                    <div class="collapse-title text-xl font-medium text-black">
                         Booking
                     </div>
                     <div class="collapse-content"> 
                       <p>hello</p>
                     </div>
                   </div>
-                  <div class="collapse collapse-plus bg-base-200">
+                  <div class="collapse collapse-plus bg-white">
                     <input type="radio" name="my-accordion-3" /> 
-                    <div class="collapse-title text-xl font-medium">
+                    <div class="collapse-title text-xl font-medium text-black">
                         Pricings
                     </div>
                     <div class="collapse-content"> 
@@ -403,10 +408,10 @@
     </main>
     <footer class="footer p-5 bg-base-200 text-base-content lg:p-20 mt-20 lg:kt-20">
       <aside class="space-y-2">
-        <h3 class="text-3xl">Get In Touch</h3>
-        <p class="lg:max-w-[400px]">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
-        <p><i class="fa-solid fa-envelope mr-3 text-yellow-300"></i>hockeys@support.com</p>
-        <p><i class="fa-solid fa-phone mr-3 text-green-300"></i>(+62) 123-321-543</p>
+        <h3 class="text-3xl text-white">Get In Touch</h3>
+        <p class="lg:max-w-[400px] text-white">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+        <p class="text-white"><i class="fa-solid fa-envelope mr-3 text-yellow-300"></i>hockeys@support.com</p>
+        <p class="text-white"><i class="fa-solid fa-phone mr-3 text-green-300"></i>(+62) 123-321-543</p>
       </aside> 
       <nav>
         <header class="footer-title">Services</header> 
